--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- Title -->
 
-    <div class="row">
+    <div class="row m-0">
       <div class="col-lg-6">
         <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
         <button class="btn btn-dark btn-lg download-button" type="button" ><i class="fa fa-apple"></i> Download</button>
